--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/vars/colors.scss';
-@import '../../assets/styles/vars/transitions.scss';
+@use '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/transitions.scss';
 
 .el-datalist {
   width: 100%;
