--- a/src/components/FormInputs/FormInput.scss
+++ b/src/components/FormInputs/FormInput.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/vars/fonts.scss';
+@use '../../assets/styles/vars/fonts.scss';
 
 .forminputs__column {
   display: flex;
@@ -56,8 +56,8 @@
   justify-content: flex-start;
   label {
     flex: 1 1 auto;
-    font-family: $font__primary, $font__primary-fallback;
-    letter-spacing: $font__primary-spacing;
+    font-family: fonts.$font__primary, fonts.$font__primary-fallback;
+    letter-spacing: fonts.$font__primary-spacing;
   }
 }
 
