--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/colors.scss';
 
 .el-menu {
   overflow: hidden;
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: left;
   padding-left: 10px;
-  background: $color__white;
+  background: colors.$color__white;
   margin-top: 1px;
 }
 
@@ -31,7 +31,7 @@
 .el-menu__section-items {
   margin-top: 1px;
   margin-bottom: 1px;
-  background: $color__gray-1;
+  background: colors.$color__gray-1;
 }
 
 .el-menu__item {
@@ -47,10 +47,10 @@
   font-size: 12px;
 
   &:hover:not(.el-menu__item--active) {
-    color: $color__main-primary;
+    color: colors.$color__main-primary;
 
     .el-menu__item__icon {
-      fill: $color__main-primary;
+      fill: colors.$color__main-primary;
     }
   }
 }
@@ -66,7 +66,7 @@
   color: #333;
 
   .el-menu__item__icon {
-    fill: $color__dark-blue-5;
+    fill: colors.$color__dark-blue-5;
   }
 }
 
@@ -79,7 +79,7 @@
 .el-menu__item--back {
   padding-left: 0px;
   height: 40px;
-  background: $color__white;
+  background: colors.$color__white;
   margin-top: 1px;
 }
 
