--- a/src/components/MessageBox/MessageBox.scss
+++ b/src/components/MessageBox/MessageBox.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/vars/colors.scss';
-@import '../../assets/styles/vars/shadow.scss';
+@use '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/shadow.scss';
 
 .el-message-box {
   display: flex;
@@ -25,51 +25,51 @@
   background-color: #eee;
 }
 .el-message-box--primary {
-  fill: $color__main-primary;
-  color: $color__main-primary;
-  border-color: $color__main-primary;
-  background-color: $shadow-color--primary-2;
+  fill: colors.$color__main-primary;
+  color: colors.$color__main-primary;
+  border-color: colors.$color__main-primary;
+  background-color: shadow.$shadow-color--primary-2;
 }
 .el-message-box--secondary {
-  fill: $color__main-secondary;
-  color: $color__main-secondary;
-  border-color: $color__main-secondary;
-  background-color: $shadow-color--secondary-2;
+  fill: colors.$color__main-secondary;
+  color: colors.$color__main-secondary;
+  border-color: colors.$color__main-secondary;
+  background-color: shadow.$shadow-color--secondary-2;
 }
 .el-message-box--tertiary {
-  fill: $color__main-tertiary;
-  color: $color__main-tertiary;
-  border-color: $color__main-tertiary;
-  background-color: $shadow-color--tertiary-2;
+  fill: colors.$color__main-tertiary;
+  color: colors.$color__main-tertiary;
+  border-color: colors.$color__main-tertiary;
+  background-color: shadow.$shadow-color--tertiary-2;
 }
 .el-message-box--success {
-  fill: $color__main-success;
-  color: $color__main-success;
-  border-color: $color__main-success;
-  background-color: $shadow-color--success-2;
+  fill: colors.$color__main-success;
+  color: colors.$color__main-success;
+  border-color: colors.$color__main-success;
+  background-color: shadow.$shadow-color--success-2;
 }
 .el-message-box--danger {
-  fill: $color__main-danger;
-  color: $color__main-danger;
-  border-color: $color__main-danger;
-  background-color: $shadow-color--danger-2;
+  fill: colors.$color__main-danger;
+  color: colors.$color__main-danger;
+  border-color: colors.$color__main-danger;
+  background-color: shadow.$shadow-color--danger-2;
 }
 .el-message-box--warning {
-  fill: $color__main-warning;
-  color: $color__main-warning;
-  border-color: $color__main-warning;
-  background-color: $shadow-color--warning-2;
+  fill: colors.$color__main-warning;
+  color: colors.$color__main-warning;
+  border-color: colors.$color__main-warning;
+  background-color: shadow.$shadow-color--warning-2;
 }
 .el-message-box--dark {
   fill: #000;
   color: #000;
   border-color: #000;
-  background-color: $shadow-color--dark-2;
+  background-color: shadow.$shadow-color--dark-2;
 }
 .el-message-box--light {
-  fill: $color__white;
-  color: $color__white;
-  border-color: $color__white;
+  fill: colors.$color__white;
+  color: colors.$color__white;
+  border-color: colors.$color__white;
   background-color: shadow-color-0light;
 }
 
