--- a/src/views/All/ComponentColors/ColorBox.scss
+++ b/src/views/All/ComponentColors/ColorBox.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/styles/vars/colors.scss';
+@use '../../../assets/styles/vars/colors.scss';
 
 .color-box {
   display: inline-block;
