--- a/src/assets/styles/items/input.scss
+++ b/src/assets/styles/items/input.scss
@@ -1,9 +1,9 @@
-@import '../vars/colors.scss';
-@import '../vars/border.scss';
-@import '../vars/background.scss';
-@import '../vars/shadow.scss';
-@import '../vars/general.scss';
-@import '../vars/fonts.scss';
+@use '../vars/colors.scss';
+@use '../vars/border.scss';
+@use '../vars/background.scss';
+@use '../vars/shadow.scss';
+@use '../vars/general.scss';
+@use '../vars/fonts.scss';
 
 .mb-input * {
   box-sizing: border-box;
@@ -15,16 +15,16 @@
 /** COMPONENT */
 
 .mb-input {
-  font-family: $font__primary, $font__primary-fallback;
-  letter-spacing: $font__primary-spacing;
-  border-radius: $border-radius;
+  font-family: fonts.$font__primary, fonts.$font__primary-fallback;
+  letter-spacing: fonts.$font__primary-spacing;
+  border-radius: border.$border-radius;
 }
 .mb-input--open {
-  box-shadow: $shadow-size;
-  padding: 0px $component-open-size;
+  box-shadow: shadow.$shadow-size;
+  padding: 0px general.$component-open-size;
 }
 .mb-input--disabled {
-  opacity: $component-opacity--disabled;
+  opacity: general.$component-opacity--disabled;
   pointer-events: none;
   cursor: auto;
 }
@@ -55,35 +55,35 @@
 }
 .mb-input--open {
   &.mb-input__shadow {
-    color: $shadow-color--default;
+    color: shadow.$shadow-color--default;
   }
   &.mb-input__shadow--pending {
-    color: $shadow-color--pending;
+    color: shadow.$shadow-color--pending;
   }
   &.mb-input__shadow--required {
-    color: $shadow-color--required;
+    color: shadow.$shadow-color--required;
   }
   &.mb-input__shadow--invalid {
-    color: $shadow-color--invalid;
+    color: shadow.$shadow-color--invalid;
   }
 }
 
 /** COMPONENT BACKGROUND **/
 
 .mb-input__background {
-  background: $background--default;
+  background: background.$background--default;
 }
 .mb-input__background--open {
-  background: $background--open;
+  background: background.$background--open;
 }
 .mb-input__background--pending {
-  background: $background--pending;
+  background: background.$background--pending;
 }
 .mb-input__background--required {
-  background: $background--required;
+  background: background.$background--required;
 }
 .mb-input__background--invalid {
-  background: $background--invalid;
+  background: background.$background--invalid;
 }
 
 /** COMPONENT BORDERS **/
@@ -91,7 +91,7 @@
 .mb-input__borders {
   border-left: 2px solid;
   border-right: 2px solid;
-  border-bottom-color: $border-color--default;
+  border-bottom-color: border.$border-color--default;
   border-right-width: 1px;
   border-left-width: 1px;
   border-top-width: 1px;
@@ -105,13 +105,13 @@
 .mb-input__borders--open {
 }
 .mb-input__borders--pending {
-  border-bottom-color: $border-color--pending;
+  border-bottom-color: border.$border-color--pending;
 }
 .mb-input__borders--required {
-  border-bottom-color: $border-color--required;
+  border-bottom-color: border.$border-color--required;
 }
 .mb-input__borders--invalid {
-  border-bottom-color: $border-color--invalid;
+  border-bottom-color: border.$border-color--invalid;
 }
 
 /** COMPONENT BLOCKS */
@@ -150,7 +150,7 @@
   transition: all 0.2s cubic-bezier(0.22, 0.61, 0.36, 1);
   position: absolute;
   top: 50%;
-  color: $placeholder-color;
+  color: general.$placeholder-color;
   transform: translateY(-50%);
 }
 .mb-input__placeholder--small {
@@ -213,5 +213,5 @@
   margin-left: 5px;
 }
 .mb-input__inner-icon--invalid {
-  fill: $color__main-danger;
+  fill: colors.$color__main-danger;
 }
