--- a/src/assets/styles/vars/shadow.scss
+++ b/src/assets/styles/vars/shadow.scss
@@ -1,27 +1,28 @@
-@import './colors.scss';
+@use 'sass:color';
+@use 'colors.scss';
 
 $shadow-size: 0px 0px 0px 3px;
 $shadow-size--closed: 0px 0px 0px 0px;
 
-$shadow-color--default: lighten($color__blue-3, 30%) !default;
-$shadow-color--pending: lighten($color__blue-4, 0%) !default;
-$shadow-color--invalid: lighten($color__main-danger, 30%) !default;
-$shadow-color--required: lighten($color__main-warning, 25%) !default;
+$shadow-color--default: color.adjust(colors.$color__blue-3, $lightness: 30%) !default;
+$shadow-color--pending: color.adjust(colors.$color__blue-4, $lightness: 0%) !default;
+$shadow-color--invalid: color.adjust(colors.$color__main-danger, $lightness: 30%) !default;
+$shadow-color--required: color.adjust(colors.$color__main-warning, $lightness: 25%) !default;
 
-$shadow-color--primary: lighten($color__main-primary, 20%) !default;
-$shadow-color--secondary: lighten($color__main-secondary, 30%) !default;
-$shadow-color--tertiary: lighten($color__gray-4, 15%) !default;
-$shadow-color--success: lighten($color__main-success, 30%) !default;
-$shadow-color--danger: lighten($color__main-danger, 30%) !default;
-$shadow-color--warning: lighten($color__main-warning, 25%) !default;
-$shadow-color--dark: lighten($color__alpha-5, 30%) !default;
-$shadow-color--light: lighten($color__blue-3, 30%) !default;
+$shadow-color--primary: color.adjust(colors.$color__main-primary, $lightness: 20%) !default;
+$shadow-color--secondary: color.adjust(colors.$color__main-secondary, $lightness: 30%) !default;
+$shadow-color--tertiary: color.adjust(colors.$color__gray-4, $lightness: 15%) !default;
+$shadow-color--success: color.adjust(colors.$color__main-success, $lightness: 30%) !default;
+$shadow-color--danger: color.adjust(colors.$color__main-danger, $lightness: 30%) !default;
+$shadow-color--warning: color.adjust(colors.$color__main-warning, $lightness: 25%) !default;
+$shadow-color--dark: color.adjust(colors.$color__alpha-5, $lightness: 30%) !default;
+$shadow-color--light: color.adjust(colors.$color__blue-3, $lightness: 30%) !default;
 
-$shadow-color--primary-2: lighten($color__main-primary, 30%) !default;
-$shadow-color--secondary-2: lighten($color__main-secondary, 40%) !default;
-$shadow-color--tertiary-2: lighten($color__gray-4, 20%) !default;
-$shadow-color--success-2: lighten($color__main-success, 50%) !default;
-$shadow-color--danger-2: lighten($color__main-danger, 40%) !default;
-$shadow-color--warning-2: lighten($color__main-warning, 35%) !default;
-$shadow-color--dark-2: lighten($color__alpha-5, 40%) !default;
-$shadow-color--light-2: lighten($color__blue-3, 40%) !default;
+$shadow-color--primary-2: color.adjust(colors.$color__main-primary, $lightness: 30%) !default;
+$shadow-color--secondary-2: color.adjust(colors.$color__main-secondary, $lightness: 40%) !default;
+$shadow-color--tertiary-2: color.adjust(colors.$color__gray-4, $lightness: 20%) !default;
+$shadow-color--success-2: color.adjust(colors.$color__main-success, $lightness: 50%) !default;
+$shadow-color--danger-2: color.adjust(colors.$color__main-danger, $lightness: 40%) !default;
+$shadow-color--warning-2: color.adjust(colors.$color__main-warning, $lightness: 35%) !default;
+$shadow-color--dark-2: color.adjust(colors.$color__alpha-5, $lightness: 40%) !default;
+$shadow-color--light-2: color.adjust(colors.$color__blue-3, $lightness: 40%) !default;
