--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/vars/colors.scss';
-@import '../../assets/styles/vars/shadow.scss';
+@use '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/shadow.scss';
 
 .input-checkbox {
   display: flex;
@@ -18,7 +18,7 @@
   &:focus {
     + label {
       &:before {
-        box-shadow: $shadow-size rgba(0, 175, 255, 0.5);
+        box-shadow: shadow.$shadow-size rgba(0, 175, 255, 0.5);
       }
     }
   }
@@ -35,7 +35,7 @@
 
     &:hover {
       &:before {
-        box-shadow: $shadow-size rgba(0, 0, 0, 0.13);
+        box-shadow: shadow.$shadow-size rgba(0, 0, 0, 0.13);
       }
     }
 
