--- a/src/components/ControlIcon/ControlIcon.scss
+++ b/src/components/ControlIcon/ControlIcon.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/vars/colors.scss';
-@import '../../assets/styles/vars/shadow.scss';
+@use '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/shadow.scss';
 
 .control__icon {
   &:hover,
@@ -53,49 +53,49 @@
   }
 }
 .control__icon--primary {
-  fill: $color__main-primary;
+  fill: colors.$color__main-primary;
   &::before {
-    background-color: $shadow-color--primary;
+    background-color: shadow.$shadow-color--primary;
   }
 }
 .control__icon--secondary {
-  fill: $color__main-secondary;
+  fill: colors.$color__main-secondary;
   &::before {
-    background-color: $shadow-color--secondary;
+    background-color: shadow.$shadow-color--secondary;
   }
 }
 .control__icon--tertiary {
-  fill: $color__main-tertiary;
+  fill: colors.$color__main-tertiary;
   &::before {
-    background-color: $shadow-color--tertiary;
+    background-color: shadow.$shadow-color--tertiary;
   }
 }
 .control__icon--success {
-  fill: $color__main-success;
+  fill: colors.$color__main-success;
   &::before {
-    background-color: $shadow-color--success;
+    background-color: shadow.$shadow-color--success;
   }
 }
 .control__icon--danger {
-  fill: $color__main-danger;
+  fill: colors.$color__main-danger;
   &::before {
-    background-color: $shadow-color--danger;
+    background-color: shadow.$shadow-color--danger;
   }
 }
 .control__icon--warning {
-  fill: $color__main-warning;
+  fill: colors.$color__main-warning;
   &::before {
-    background-color: $shadow-color--warning;
+    background-color: shadow.$shadow-color--warning;
   }
 }
 .control__icon--dark {
   fill: #000;
   &::before {
-    background-color: $shadow-color--dark;
+    background-color: shadow.$shadow-color--dark;
   }
 }
 .control__icon--light {
-  fill: $color__white;
+  fill: colors.$color__white;
   &::before {
     background-color: shadow-color-0light;
   }
