--- a/src/components/DataList/Header.scss
+++ b/src/components/DataList/Header.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/vars/colors.scss';
-@import '../../assets/styles/vars/transitions.scss';
+@use '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/transitions.scss';
 
 .el-datalist__header-cell {
   flex: 1;
@@ -27,8 +27,8 @@
   }
 }
 .el-datalist__header-cell--sorting {
-  color: $color__blue-4;
-  border-bottom-color: $color__blue-3;
+  color: colors.$color__blue-4;
+  border-bottom-color: colors.$color__blue-3;
 }
 .el-datalist__header-cell--filtering {
   border-bottom-color: #f63;
