--- a/src/components/DataList/Rows.scss
+++ b/src/components/DataList/Rows.scss
@@ -1,7 +1,7 @@
-@import '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/colors.scss';
 
 .el-datalist__row {
-  border-bottom: 1px solid $color__gray-2;
+  border-bottom: 1px solid colors.$color__gray-2;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -10,7 +10,7 @@
   justify-content: space-between;
 
   &:nth-child(odd) {
-    background: $color__gray-1;
+    background: colors.$color__gray-1;
   }
   &:nth-child(even) {
     background: #fff;
@@ -19,8 +19,8 @@
     background-color: #f8fcff;
   }
   &.el-datalist__row--selected {
-    border-bottom: 1px solid $color__blue-3;
-    background: linear-gradient(0deg, $color__blue-3 1px, #f4fcff 1px);
+    border-bottom: 1px solid colors.$color__blue-3;
+    background: linear-gradient(0deg, colors.$color__blue-3 1px, #f4fcff 1px);
   }
 }
 .el-datalist__row--filtered {
