--- a/src/components/DatePicker/DatePicker.scss
+++ b/src/components/DatePicker/DatePicker.scss
@@ -1,6 +1,6 @@
-@import '../../assets/styles/vars/colors.scss';
-@import '../../assets/styles/vars/transitions.scss';
-@import '../../assets/styles/vars/fonts.scss';
+@use '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/transitions.scss';
+@use '../../assets/styles/vars/fonts.scss';
 
 .input-datepicker {
 }
@@ -9,7 +9,7 @@
   display: flex;
   position: relative;
   cursor: pointer;
-  transition: $input__main-transition;
+  transition: transitions.$input__main-transition;
 
   &.input-datepicker__mb-input--open {
   }
@@ -89,8 +89,8 @@
   position: relative !important;
   padding: 10px 0px 5px 0px;
   user-select: none;
-  font-family: $font__primary, $font__primary-fallback;
-  letter-spacing: $font__primary-spacing;
+  font-family: fonts.$font__primary, fonts.$font__primary-fallback;
+  letter-spacing: fonts.$font__primary-spacing;
 }
 
 .DayPicker-Month {
