--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/colors.scss';
 
 .el-modal {
   position: fixed;
@@ -24,7 +24,7 @@
   position: absolute;
   opacity: 1;
   background: #fff;
-  box-shadow: 0px 6px 0px $color__alpha-2;
+  box-shadow: 0px 6px 0px colors.$color__alpha-2;
   width: 600px;
   flex: 0 0 auto;
   display: flex;
@@ -37,15 +37,15 @@
   }
   &.danger {
     .el-modal__header {
-      background: $color__main-danger;
-      color: $color__white;
+      background: colors.$color__main-danger;
+      color: colors.$color__white;
     }
   }
 
   &.warning {
     .el-modal__header {
-      background: $color__main-warning;
-      color: $color__white;
+      background: colors.$color__main-warning;
+      color: colors.$color__white;
     }
   }
 }
@@ -66,7 +66,7 @@
 
   background: #eee;
   color: #666;
-  border-bottom: 2px solid $color__alpha-2;
+  border-bottom: 2px solid colors.$color__alpha-2;
 
   .el-modal__header-title {
     margin-left: 20px;
