--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/colors.scss';
 
 .Navbar {
   user-select: none;
@@ -153,7 +153,7 @@
 .Navbar__environment-item,
 .Navbar__user-item {
   &:hover {
-    color: $color__main-primary--active;
+    color: colors.$color__main-primary--active;
     text-decoration: underline;
     background: rgba(0, 0, 0, 0.05);
     cursor: pointer;
@@ -254,7 +254,7 @@
   height: 35px;
   border-top: 1px solid #ddd;
   &:hover {
-    color: $color__main-primary--active;
+    color: colors.$color__main-primary--active;
     background: rgba(255, 255, 255, 0.1);
     cursor: pointer;
   }
@@ -341,7 +341,7 @@
   height: 35px;
   display: flex;
   flex: 1 0 auto;
-  background: $color__gray-1;
+  background: colors.$color__gray-1;
   color: #999;
   fill: rgba(0, 0, 0, 0.5);
   border-bottom: 2px solid #4fc7e7;
@@ -384,7 +384,7 @@
   padding-left: 10px;
 
   &:hover {
-    color: $color__main-primary--active;
+    color: colors.$color__main-primary--active;
     text-decoration: underline;
     background: rgba(0, 0, 0, 0.05);
   }
