--- a/src/components/ScrollBox/ScrollBox.scss
+++ b/src/components/ScrollBox/ScrollBox.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/colors.scss';
 
 .el-scrollbox__wrapper {
   position: relative;
