--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/vars/colors.scss';
-@import '../../assets/styles/vars/fonts.scss';
+@use '../../assets/styles/vars/colors.scss';
+@use '../../assets/styles/vars/fonts.scss';
 
 .el-tooltip {
   max-width: 100%;
@@ -40,8 +40,8 @@
   transition: opacity 0.1s ease-in-out;
   max-width: calc(100% - 20px);
   display: table;
-  font-family: $font__primary, $font__primary-fallback;
-  letter-spacing: $font__primary-spacing;
+  font-family: fonts.$font__primary, fonts.$font__primary-fallback;
+  letter-spacing: fonts.$font__primary-spacing;
 }
 
 .el-tooltip__viewer--break {
@@ -61,17 +61,17 @@
 .el-tooltip__viewer--error {
   color: #fff;
   fill: #fff;
-  background: $color__main-danger;
+  background: colors.$color__main-danger;
 }
 .el-tooltip__viewer--info {
   color: #fff;
   fill: #fff;
-  background: $color__main-primary;
+  background: colors.$color__main-primary;
 }
 .el-tooltip__viewer--warning {
   color: #fff;
   fill: #fff;
-  background: $color__main-warning;
+  background: colors.$color__main-warning;
 }
 
 .el-tooltip__viewer--fade-in-top {
@@ -121,17 +121,17 @@
   border: none;
 }
 .el-tooltip__handle--error {
-  background: $color__main-danger;
+  background: colors.$color__main-danger;
 }
 .el-tooltip__handle--info {
-  background: $color__main-primary;
+  background: colors.$color__main-primary;
 }
 .el-tooltip__handle--warning {
-  background: $color__main-warning;
+  background: colors.$color__main-warning;
 }
 .el-tooltip__handle--neutral {
-  background: $color__white;
-  box-shadow: 0px 0px 2px $color__alpha-2;
+  background: colors.$color__white;
+  box-shadow: 0px 0px 2px colors.$color__alpha-2;
 }
 .el-tooltip__handle-wrapper--top-start {
   top: 100%;
